--- a/src/main/resources/templates/blogPost-in-detail.html
+++ b/src/main/resources/templates/blogPost-in-detail.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>BlogPost in Detail</title>
@@ -38,8 +38,17 @@
                 <input type="hidden" th:field="${oneBlogPost.author.id}">
 
                 <div class="d-flex justify-content-between">
-                    <div>
-                        <a class="m-2" href="#"><i class="bi bi-heart"></i> Like</a>
+                    <div sec:authorize="isAuthenticated()">
+                        <a th:if="${!likedpostids.contains(oneBlogPost.id)}"
+                           th:href="@{'/create/post/{postId}'(postId=${oneBlogPost.id})}" class="col-md-2">
+                            <!--                            <button type="button" class="m-2" th:text="Like"><i class="bi bi-heart"></i> Like</button>-->
+                            <i class="bi bi-heart"></i> Like
+                        </a>
+                        <a th:if="${likedpostids.contains(oneBlogPost.id)}"
+                           th:href="@{'/delete/post/{postId}'(postId=${oneBlogPost.id})}" class="col-md-2">
+                            <!--                            <button type="button" class="m-2" th:text="Dislike"><i class="bi bi-heart-fill"></i> Dislike</button>-->
+                            <i class="bi bi-heart-fill"></i> Dislike
+                        </a>
                         <a class="m-2" href="#"><i class="bi bi-chat-right"></i> Comments</a>
                         <a class="m-2" href="#">See more <i class="bi bi-three-dots"></i></a>
                     </div>
@@ -58,10 +67,38 @@
 
 
     </div>
-    <a th:href="@{/commentForm/{postId}(postId=${oneBlogPost.id})}" class="btn btn-info">leave a comment</a>
+    <a th:href="@{/commentForm/{postId}(postId=${oneBlogPost.id})}"
+       class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">leave
+        a comment</a>
 </div>
 
 
+<div class="container ">
+
+    <h1 class="m-5">All Comments</h1>
+
+    <div>
+        <div class="card m-3" th:each="comment:${allComments}">
+            <div class="card-body">
+
+                <div>
+                    <p class="m-0"><i class="bi bi-calendar-check"></i><small
+                            th:text="' '+${comment.commentCreatedDate}"></small>
+                    </p>
+                    <small th:text="'Created By : '+${comment.blogPost.author.userName}"></small>
+                </div>
+
+
+                <p class="card-text mt-5" th:text="${comment.body}"></p>
+
+
+            </div>
+        </div>
+
+
+    </div>
+
+</div>
 
 
 </body>
