--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -11,19 +11,22 @@
           integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
           crossorigin="anonymous"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-light">
 
-<nav class="navbar navbar-light bg-warning">
+<nav class="navbar navbar-light bg-red-100 h-20">
     <form class="container-fluid justify-content-between">
 
         <div>
-            <a th:href="@{/authors/}" class="btn btn-outline-success me-2 mr-4">See Authors</a>
-            <a th:href="@{/showPostForm}" class="btn btn-outline-success me-2 mr-4">Create a Post</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/authors/}" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">See Authors</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/showPostForm}" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Create a Post</a>
         </div>
         <div>
-            <a th:href="@{/authors/register}" class="btn btn-outline-success me-2 mr-4">Sign Up</a>
-            <a th:href="@{/login}" class="btn btn-outline-success me-2 mr-4">Sign in</a>
+            <a sec:authorize= "isAnonymous()" th:href="@{/authors/register}" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Sign Up</a>
+            <a sec:authorize="isAuthenticated()" th:href="@{/logout}" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Log out</a>
+            <a sec:authorize= "isAnonymous()" th:href="@{/login}" class="text-white bg-gradient-to-br from-pink-500 to-orange-400 hover:bg-gradient-to-bl focus:ring-4 focus:outline-none focus:ring-pink-200 dark:focus:ring-pink-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2">Log in</a>
+
         </div>
 
 
@@ -74,12 +77,23 @@
 
 
                 <div class="d-flex justify-content-between">
-                    <div>
-                        <a class="m-2" href="#"><i class="bi bi-heart"></i> Like</a>
+                    <div sec:authorize="isAuthenticated()">
+<!--                        <a class="m-2" href="#"><i class="bi bi-heart"></i> Like</a>-->
+
+
+                        <a th:if="${!likedpostids.contains(post.id)}" th:href="@{'/create/post/{id}'(id=${post.id})}" class="col-md-2">
+<!--                            <button type="button" class="m-2" th:text="Like"><i class="bi bi-heart"></i> Like</button>-->
+                            <i class="bi bi-heart"></i> Like
+                        </a>
+                        <a th:if="${likedpostids.contains(post.id)}" th:href="@{'/delete/post/{postId}'(postId=${post.id})}" class="col-md-2">
+<!--                            <button type="button" class="m-2" th:text="Dislike"><i class="bi bi-heart-fill"></i> Dislike</button>-->
+                            <i class="bi bi-heart-fill"></i> Dislike
+                        </a>
+
                         <a class="m-2" href="#"><i class="bi bi-chat-right"></i> Comments</a>
                         <a class="m-2" th:href="@{/postInDetail/{postId}(postId=${post.id})}">See more <i class="bi bi-three-dots"></i></a>
                     </div>
-                    <div class="d-flex m-0">
+                    <div sec:authorize="isAuthenticated()" class="d-flex m-0">
 
                         <!--                        <a class="m-2" href="#"><i class="bi bi-trash"></i> Delete</a>-->
                         <!--                        <a class="m-2" th:href="@{'/blogpost/editPost/'+${post.author.id}"><i class="bi bi-pen"></i> Edit</a>-->
